tests/snapshots/files__tiny-structured.snap
---
source: tests/files.rs
expression: result.visualization
---
main {
block:
 v: int = const 5;
 print v;
 return

}
