tests/snapshots/files__tiny_no_opt.snap
---
source: tests/files.rs
expression: "format!(\"{}\", res)"
---
@main {
.entry___:
  jmp .sblock___0;
.sblock___0:
.b1:
  v.0: int = const 5;
  v0_: int = const 5;
  print v0_;
  ret;
.sblock___1:
.exit___:
}

