tests/snapshots/files__two_fns-naiive.snap
---
source: tests/files.rs
expression: result.visualization
---
@main {
.entry___:
  v0: int = const 1;
  v1: int = const 2;
  v2: int = const 3;
  print v2;
  ret;
.sblock___0:
.exit___:
}
@sub {
.entry___:
  v0: int = const 1;
  v1: int = const 2;
  v2: int = const -1;
  ret v2;
.sblock___0:
.exit___:
}

