tests/snapshots/files__two_fns-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@sub: int {
  c0_: int = const -1;
  ret c0_;
}
@main {
  c0_: int = const 3;
  print c0_;
  ret;
}
