tests/snapshots/files__two_fns-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@sub: int {
.b0_:
  c1_: int = const -1;
  ret c1_;
}
@main {
.b0_:
  c1_: int = const 3;
  print c1_;
  ret;
}
