tests/snapshots/files__two_fns-rvsdg-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@sub: int {
  v1: int = const -1;
  ret v1;
}
@main {
  v1: int = const 3;
  print v1;
}

