tests/snapshots/files__two_fns-structured.snap
---
source: tests/files.rs
expression: result.visualization
---
main {
block:
 v0: int = const 1;
 v1: int = const 2;
 v2: int = add v0 v1;
 print v2;
 return

}

sub {
block:
 v0: int = const 1;
 v1: int = const 2;
 v2: int = sub v0 v1;
 return v2

}
