tests/snapshots/files__two_fns.snap
---
source: tests/files.rs
expression: "format!(\"{}\", res)"
---
@main {
.entry___:
  jmp .sblock___0;
.sblock___0:
.b1:
  v0.0: int = const 1;
  v1.0: int = const 2;
  v2.0: int = const 3;
  ret v2.0;
.sblock___1:
.exit___:
}
@sub {
.entry___:
  jmp .sblock___0;
.sblock___0:
.b1:
  v0.0: int = const 1;
  v1.0: int = const 2;
  v2.0: int = const -1;
  ret v2.0;
.sblock___1:
.exit___:
}

