tests/snapshots/files__two_fns_naiive_no_opt.snap
---
source: tests/files.rs
expression: "format!(\"{}\", res)"
---
@main {
.entry___:
  v0: int = const 1;
  v1: int = const 2;
  v2: int = add v0 v1;
  ret;
.sblock___0:
.exit___:
}
@sub {
.entry___:
  v0: int = const 1;
  v1: int = const 2;
  v2: int = sub v0 v1;
  ret;
.sblock___0:
.exit___:
}

